# hiking

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.claude/skills/yama/: SKILL.md
.github/workflows/: smoke.yml
plugins/yama/.claude-plugin/: plugin.json
plugins/yama/skills/yama/: SKILL.md
src/yama/: agent_tools.py  book.py  cli.py  doctor.py  enzanso.py  hotaka.py  html_report.py  hunt.py  hut_avail.py  hutdirect.py  maitabi.py  matcher.py  matching.py  mcp_server.py  planner.py  report.py  snipe.py  tenawan.py  travelanswer.py  watch.py  weather.py  yamap.py  yamatan.py  yamatan_bridge.py
src/yama/data/: mountains.json
tests/: test_matcher.py  test_planner.py  test_weather.py  test_yamap.py  test_yamatan.py
