[project]
name = "yama"
version = "0.1.0"
description = "登山規劃 CLI：輸入山名，取得毎日あるぺん号巴士方案、山屋住宿、Yamap 路線圖與天氣預報"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.2",
    "rich>=13.7",
    "typer>=0.12",
]

[project.scripts]
yama = "yama.cli:run"
yama-mcp = "yama.mcp_server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
bot = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "line-bot-sdk>=3.12",
    "google-genai>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yama"]
